--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Microservice for recording listening history of users, using InfluxDB for time-series records.",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "dev": "set NODE_ENV=development&& node server.js",
+    "prod": "set NODE_ENV=production&& node server.js",
     "test": "jest"
   },
   "keywords": [],
