--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "@influxdata/influxdb-client": "^1.33.2",
+    "@influxdata/influxdb-client-apis": "^1.33.2",
     "amqplib": "^0.10.3",
-    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "prom-client": "^15.0.0"
   },
