--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@influxdata/influxdb-client-apis": "^1.33.2",
     "amqplib": "^0.10.3",
     "express": "^4.18.2",
-    "prom-client": "^15.0.0"
+    "prom-client": "^15.0.0",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "jest": "^29.7.0"
