--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -87,6 +87,8 @@ jobs:
         run: az aks get-credentials --name dev-frankencluster --resource-group frankengroup
       - name: Deploy to AKS
         run: kubectl apply -f ./deployments
+      - name: Restart Deployment
+        run: kubectl rollout restart deployment/history
 
   snyk-docker:
     name: Static Docker image security analysis with Synk
