--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -68,7 +68,7 @@ jobs:
           context: ./
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/history-microservice:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/history:latest
 
   deploy:
     name: Deployment
