--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@influxdata/influxdb-client-apis": "^1.33.2",
     "amqplib": "^0.10.3",
     "express": "^4.18.2",
+    "moment": "^2.30.1",
     "prom-client": "^15.0.0",
     "winston": "^3.11.0"
   },
